Axe issue fix: Contrast on links

--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -45,5 +45,5 @@ h1, h3{
 }
 a{
 	text-decoration: none;
-	color: #2C8DC9;
+	color: $blue;
 }
