--- a/_sass/generic/_variables.scss
+++ b/_sass/generic/_variables.scss
@@ -5,7 +5,7 @@
 //Colors
 $black: #2c2c2c;
 $dark-gray: #444;
-$blue: #2C8DC9;
+$blue: #045c93;
 
 
 //breakpoints
